📝 rename all SliQEC_v2 to SliQEC
Rename all the SliQEC_v2 into SliQEC, including README, output
binary, CMake project name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.20)
 
 project(
-    SliQEC_v2
+    SliQEC
     LANGUAGES CXX
-    DESCRIPTION "SliQEC_v2 - A BDD-based Quantum Circuit Equivalence Checker")
+    DESCRIPTION "SliQEC - A BDD-based Quantum Circuit Equivalence Checker")
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
